# FreeRTOS-Kernel-meson

./: .meson.build.kate-swp  README.md  croutine.c  glueme.c  meson.build  meson_options.txt  queue.c
include/: queue.h
portable/GCC/ARM_CM4F/: FreeRTOSConfig.h
portable/GCC/Posix/: FreeRTOSConfig.h  port.c  portmacro.h
